Fix cursive font on mobile

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 
 * {
   box-sizing: border-box;
-  font-family: 'Comic Sans MS', 'Comic Sans', cursive;
+  font-family: 'Comic Sans MS', 'Comic Sans', 'Patrick Hand', sans-serif;
 }
 
 body {
